@@ -5,7 +5,7 @@ import com.dmdirc.ktirc.messages.pongMessage
 
 class PingHandler : EventHandler {
 
-    override suspend fun processEvent(client: IrcClient, event: IrcEvent) {
+    override fun processEvent(client: IrcClient, event: IrcEvent) {
         when (event) {
             is PingReceived -> client.send(pongMessage(event.nonce))
         }
