@@ -4,7 +4,7 @@ import com.dmdirc.ktirc.IrcClient
 
 class ServerStateHandler : EventHandler {
 
-    override suspend fun processEvent(client: IrcClient, event: IrcEvent) {
+    override fun processEvent(client: IrcClient, event: IrcEvent) {
         when (event) {
             is ServerWelcome -> client.serverState.localNickname = event.localNick
             is ServerFeaturesUpdated -> client.serverState.features.setAll(event.serverFeatures)
